# Lv-490.Linux_part

./: CMakeLists.txt
Client/: Client.cpp  Client.h  Client.pro  ClientSocket.h  ClientSysInfo.cpp  ClientSysInfo.h  ClientWindow.ui  Clientsysinfo.cpp.autosave  QTcpClientSocket.cpp  QTcpClientSocket.h  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  dds.ui
Server/: CMakeLists.txt
Server/src/: ConnectionAcceptor.cpp  ConnectionAcceptor.h  EventHandler.cpp  EventHandler.h  EventHandlerPtr.h  EventType.h  IDaemon.h  PIDController.cpp  PIDController.h  ReactorInterface.cpp  ReactorInterface.h  ReactorSelectImpl.cpp  ReactorSelectImpl.h  TCPServer.cpp  TCPServer.h  main.cpp  select.cpp  select.h
Utility/Logger/: CMakeLists.txt  LoggerSHARED.h  README.txt
Utility/Logger/LibraryFiles/include/: ILogger.h  LoggerDLL.h  StaticLogging.h  filelogger_Messages.h  filelogger_StreamModes.h  library.h
Utility/Logger/LibraryFiles/include/Essentials/: ExportConfig.h  LogFundamentals.h
Utility/Logger/LibraryFiles/include/Filelogger/: FileLogAdapters.h  filelogger.h
Utility/Logger/src/: ExportConfig.h  ILogger.h  LoggerImplementation.h  LoggerLibrary.h  StaticLogging.h
Utility/Logger/src/LibraryImplementation/Essentials/: LogFundamentals.cpp  LogFundamentals.h
Utility/Logger/src/LibraryImplementation/Filelogger/: StaticFilelogger.cpp  filelogger.cpp  filelogger.h  filelogger_FileManager.cpp  filelogger_Messages.cpp  filelogger_Messages.h  filelogger_StreamModes.cpp  filelogger_StreamModes.h
Utility/Logger/src/LibraryImplementation/Filelogger/Lv490XMLServer/: XMLParserConfigConverter.h
Utility/Logger/src/LibraryImplementation/Filelogger/Utility/: ConcQueue.h
build-Client-Desktop_Qt_5_14_2_GCC_64bit-Debug/: Makefile  moc_Client.cpp  moc_SettingsWindow.cpp  qrc_res.cpp  ui_ClientWindow.h  ui_SettingsWindow.h
